src-tauri/error.log
    Checking investment-analyzer v0.1.0 (C:\Users\yun\Desktop\project\indicators\investment-analyzer\src-tauri)
warning: unused import: `reqwest::Client`
 --> src\fetcher\cnn.rs:2:5
  |
2 | use reqwest::Client;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `serde_json::Value`
 --> src\fetcher\cnn.rs:4:5
  |
4 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `Manager`
 --> src\core\scheduler.rs:1:24
  |
1 | use tauri::{AppHandle, Manager, Emitter};
  |                        ^^^^^^^

warning: unused import: `crate::fetcher::DataSource`
 --> src\core\scheduler.rs:7:5
  |
7 | use crate::fetcher::DataSource;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::models::DataPoint`
 --> src\analysis\market_status.rs:3:5
  |
3 | use crate::models::DataPoint;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `pool`
  --> src\analysis\mod.rs:12:5
   |
12 |     pool: State<'_, SqlitePool>, 
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `slug_a`
  --> src\analysis\mod.rs:13:5
   |
13 |     slug_a: String, 
   |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_slug_a`

warning: unused variable: `slug_b`
  --> src\analysis\mod.rs:14:5
   |
14 |     slug_b: String,
   |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_slug_b`

warning: unused variable: `window_days`
  --> src\analysis\mod.rs:15:5
   |
15 |     window_days: Option<i64>
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_window_days`

warning: unused variable: `pool`
  --> src\analysis\mod.rs:26:5
   |
26 |     pool: State<'_, SqlitePool>,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`

warning: unused variable: `slugs`
  --> src\analysis\mod.rs:27:5
   |
27 |     slugs: Vec<String>,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_slugs`

warning: unused variable: `window_days`
  --> src\analysis\mod.rs:28:5
   |
28 |     window_days: Option<i64>
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_window_days`

warning: unused variable: `pool`
  --> src\analysis\mod.rs:35:5
   |
35 |     pool: State<'_, SqlitePool>,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`

warning: unused variable: `target_slug`
  --> src\analysis\mod.rs:36:5
   |
36 |     target_slug: String,
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_target_slug`

warning: unused variable: `candidate_slugs`
  --> src\analysis\mod.rs:37:5
   |
37 |     candidate_slugs: Vec<String>,
   |     ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_candidate_slugs`

warning: unused variable: `window_days`
  --> src\analysis\mod.rs:38:5
   |
38 |     window_days: Option<i64>
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_window_days`

warning: unused variable: `range`
  --> src\analysis\mod.rs:47:5
   |
47 |     range: String
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_range`

warning: unused variable: `pool`
  --> src\analysis\mod.rs:64:5
   |
64 |     pool: State<'_, SqlitePool>,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`

warning: unused variable: `target_slug`
  --> src\analysis\mod.rs:65:5
   |
65 |     target_slug: String,
   |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_target_slug`

warning: unused variable: `indicator_slug`
  --> src\analysis\mod.rs:66:5
   |
66 |     indicator_slug: String,
   |     ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_indicator_slug`

warning: unused variable: `max_lag`
  --> src\analysis\mod.rs:67:5
   |
67 |     max_lag: i32
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_max_lag`

error[E0382]: borrow of moved value: `pool`
   --> src\lib.rs:205:70
    |
189 |                     Ok(pool) => {
    |                        ---- move occurs because `pool` has type `Pool<Sqlite>`, which does not implement the `Copy` trait
...
199 |                         match core::scheduler::init(pool, app_handle).await {
    |                                                     ---- value moved here
...
205 |                                 if let Err(e) = db::seed_fng_history(&pool).await {
    |                                                                      ^^^^^ value borrowed here after move
    |
note: consider changing this parameter type in function `init` to borrow instead if owning the value isn't necessary
   --> src\core\scheduler.rs:9:25
    |
  9 | pub async fn init(pool: SqlitePool, app_handle: AppHandle) -> Result<JobScheduler, anyhow::Error> {
    |              ----       ^^^^^^^^^^ this parameter takes ownership of the value
    |              |
    |              in this function

For more information about this error, try `rustc --explain E0382`.
warning: `investment-analyzer` (lib) generated 21 warnings
error: could not compile `investment-analyzer` (lib) due to 1 previous error; 21 warnings emitted
